--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -34,3 +34,7 @@
   <strong>Production Company: </strong>
   <%= link_to @movie.production_company.name, @movie.production_company %>
 </p>
+
+<p class="mt-5">
+  <strong><%= link_to '🚗 See the top 100 movies!', movies_path %></strong>
+</p>
