--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,3 @@
 <h2 class="title is-2">Top 100 Movies</h1>
 
-<ol class="ml-5">
-  <% @movies.each do |movie|%>
-  <li><%= link_to movie.title, movie %></li>
-  <% end %>
-</ol>
+<%= render partial: 'movie', collection: @movies, locals: { show_link: true } %>
