--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,13 @@
       <div class="container">
         <h1 class="title is-1"><%= link_to 'Top Movies From IMDB', root_path %></h1>
         <%= yield %>
+
+        <% if controller_name == 'home' %>
+          <p>There's no place like home.</p>
+        <% else %>
+          <%= render partial: 'common/footer' %>
+        <% end %>
+
       </div>
     </section>
   </body>
