Added many to many Genres to movie_Genres.. added genres to seeds and genres to movie view

--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -20,6 +20,11 @@
 </progress>
 
 <p>
+	<strong>Genres: </strong>
+	<%= movie.genres_list %>
+</p>
+
+<p>
   <strong>Rating: </strong>
   <%= movie.average_vote %>
 </p>
